arreglos jiji imagenes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="products">
             <div class="content">
                 <div class="product">
-                    <img src="./assets/images/lata.png" alt="Producto">
+                    <img src="./assets/images/alfajor.jpg" alt="Producto">
                     <div class="product-body">
                         <h6>Alfajor sin azucar con cafe y leche</h6>
                         <span class="product__cant">(6 unidades)</span>
