--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         </select>
     </section>
     <section class="content">
-        <div class="filter">
+        <!-- <div class="filter">
 
-        </div>
+        </div> -->
         <div class="products">
             <div class="content">
                 <div class="product">
