--- a/index.html
+++ b/index.html
@@ -169,14 +169,16 @@
                 </g>
             </svg>
             <ul>
-                <li>Direccion</li>
-                <li>Direccion</li>
-                <li>Direccion</li>
+                <li>Rubio #120, Rancagua</li>
+                <li>Chile</li>
+                <li>Ventas@rajit.cl</li>
             </ul>
             <ul>
-                <li>Direccion</li>
-                <li>Direccion</li>
-                <li>Direccion</li>
+                <li>Horario de Atención Local</li>
+                <br>
+                <li>Lunes a Viernes 10:00 a 18:00</li>
+                <br>
+                <li>Sábado 11:00 a 14:00</li>
             </ul>
         </div>
         <div>
