--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="head__input">
                 <img src="./assets/images/buscar-white.png" alt="search">
-                <input type="text" title="search" placeholder="Buscar Productos...">
+                <input type="text" title="search" placeholder="Buscar Pene...">
             </div>
             <div class="head__carrito">
                 <img src="./assets/images/carrito-de-compras.png" alt="carrito">
